tests/paczka1/small_fuzzy/31481181.err
Error in line 4: q5TL0s22J1x A60 0,0
Error in line 6: LYeGTo S482 4,0
